// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountDetails renders without error 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "flexShrink": 1,
      "gap": 16,
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
        "flexShrink": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexShrink": 1,
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "column",
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "transparent",
              "borderBottomColor": "transparent",
              "borderBottomLeftRadius": 999999,
              "borderBottomRightRadius": 999999,
              "borderBottomWidth": 0,
              "borderLeftColor": "transparent",
              "borderLeftWidth": 0,
              "borderRightColor": "transparent",
              "borderRightWidth": 0,
              "borderStyle": "solid",
              "borderTopColor": "transparent",
              "borderTopLeftRadius": 999999,
              "borderTopRightRadius": 999999,
              "borderTopWidth": 0,
              "flexDirection": "column",
              "position": "relative",
            }
          }
          testID="account-icon"
        >
          <View
            style={
              {
                "flexDirection": "column",
              }
            }
          >
            <svg
              height={24}
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                style={
                  {
                    "transformOrigin": "center center",
                  }
                }
              >
                <circle
                  cx={12}
                  cy={12}
                  fill="#00C3A01F"
                  r={12}
                />
                <g
                  transform="translate(4, 4) scale(0.3333333333333333)"
                />
              </g>
            </svg>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "flexDirection": "column",
            "flexShrink": 1,
            "gap": 0,
          }
        }
      >
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 12,
            }
          }
        >
          <View
            style={
              {
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "gap": 4,
              }
            }
          >
            <Text
              adjustsFontSizeToFit={true}
              allowFontScaling={false}
              ellipsizeMode="tail"
              maxFontSizeMultiplier={1.4}
              numberOfLines={1}
              style={
                {
                  "color": "#131313",
                  "flexShrink": 1,
                  "fontFamily": "Basel Grotesk",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 18.2,
                }
              }
              suppressHighlighting={true}
              testID="address-display/name/undefined"
            />
          </View>
        </View>
        <View
          style={
            {
              "flexDirection": "column",
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "flexShrink": 1,
        "gap": 4,
        "justifyContent": "flex-end",
      }
    }
  >
    <Text
      allowFontScaling={false}
      maxFontSizeMultiplier={1.4}
      style={
        {
          "color": "rgba(19, 19, 19, 0.63)",
          "fontFamily": "Basel Grotesk",
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 18.2,
        }
      }
      suppressHighlighting={true}
    >
      0x82D5...3Fa6
    </Text>
  </View>
</View>
`;

exports[`AccountDetails renders without error with chevron 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "flexShrink": 1,
      "gap": 16,
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
        "flexShrink": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexShrink": 1,
          "gap": 8,
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "column",
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "transparent",
              "borderBottomColor": "transparent",
              "borderBottomLeftRadius": 999999,
              "borderBottomRightRadius": 999999,
              "borderBottomWidth": 0,
              "borderLeftColor": "transparent",
              "borderLeftWidth": 0,
              "borderRightColor": "transparent",
              "borderRightWidth": 0,
              "borderStyle": "solid",
              "borderTopColor": "transparent",
              "borderTopLeftRadius": 999999,
              "borderTopRightRadius": 999999,
              "borderTopWidth": 0,
              "flexDirection": "column",
              "position": "relative",
            }
          }
          testID="account-icon"
        >
          <View
            style={
              {
                "flexDirection": "column",
              }
            }
          >
            <svg
              height={24}
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                style={
                  {
                    "transformOrigin": "center center",
                  }
                }
              >
                <circle
                  cx={12}
                  cy={12}
                  fill="#00C3A01F"
                  r={12}
                />
                <g
                  transform="translate(4, 4) scale(0.3333333333333333)"
                />
              </g>
            </svg>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "flexDirection": "column",
            "flexShrink": 1,
            "gap": 0,
          }
        }
      >
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 12,
            }
          }
        >
          <View
            style={
              {
                "flexDirection": "row",
                "flexGrow": 1,
                "flexShrink": 1,
                "gap": 4,
              }
            }
          >
            <Text
              adjustsFontSizeToFit={true}
              allowFontScaling={false}
              ellipsizeMode="tail"
              maxFontSizeMultiplier={1.4}
              numberOfLines={1}
              style={
                {
                  "color": "#131313",
                  "flexShrink": 1,
                  "fontFamily": "Basel Grotesk",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 18.2,
                }
              }
              suppressHighlighting={true}
              testID="address-display/name/undefined"
            />
          </View>
        </View>
        <View
          style={
            {
              "flexDirection": "column",
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "flexShrink": 1,
        "gap": 4,
        "justifyContent": "flex-end",
      }
    }
  >
    <Text
      allowFontScaling={false}
      maxFontSizeMultiplier={1.4}
      style={
        {
          "color": "rgba(19, 19, 19, 0.63)",
          "fontFamily": "Basel Grotesk",
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 18.2,
        }
      }
      suppressHighlighting={true}
    >
      0x82D5...3Fa6
    </Text>
    <View
      collapsable={false}
      forwardedRef={[Function]}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "borderBottomLeftRadius": 999999,
            "borderBottomRightRadius": 999999,
            "borderTopLeftRadius": 999999,
            "borderTopRightRadius": 999999,
            "transform": [
              {
                "rotate": "180deg",
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "flexDirection": "column",
            "justifyContent": "center",
          },
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "column",
            "justifyContent": "center",
          },
          {
            "borderBottomLeftRadius": 999999,
            "borderBottomRightRadius": 999999,
            "borderTopLeftRadius": 999999,
            "borderTopRightRadius": 999999,
            "transform": [
              {
                "rotate": "180deg",
              },
            ],
          },
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={24}
        bbWidth={24}
        fill="none"
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        strokeWidth={8}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "color": "rgba(19, 19, 19, 0.63)",
              "height": 24,
              "width": 24,
            },
            {
              "flex": 0,
              "height": 24,
              "width": 24,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
      >
        <RNSVGGroup
          color="rgba(19, 19, 19, 0.63)"
          fill={null}
          propList={
            [
              "fill",
              "strokeWidth",
            ]
          }
          strokeWidth={8}
        >
          <RNSVGPath
            clipRule={0}
            d="M15.7071 5.29289C16.0976 5.68342 16.0976 6.31658 15.7071 6.70711L10.4142 12L15.7071 17.2929C16.0976 17.6834 16.0976 18.3166 15.7071 18.7071C15.3166 19.0976 14.6834 19.0976 14.2929 18.7071L8.2929 12.7071C7.9024 12.3166 7.9024 11.6834 8.2929 11.2929L14.2929 5.29289C14.6834 4.90237 15.3166 4.90237 15.7071 5.29289Z"
            fill={
              {
                "type": 2,
              }
            }
            fillRule={0}
            propList={
              [
                "fill",
                "fillRule",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;
